--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -33,15 +33,10 @@ img {
 .topnav {
   overflow: hidden;
   margin: 3.5%;
-}
-.header-logo {
-    float: left;
-}
-.main-navbar {
-    float: right;
+  display: flex;
+  justify-content: space-between;
 }
 .topnav a {
-  float: left;
   display: block;
   color: #000000;
   text-align: center;
@@ -66,10 +61,13 @@ img {
 
 .topnav .icon {
   display: none;
+  color: red;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 1080px) {
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -77,7 +75,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -90,16 +90,18 @@ img {
   }
 }
 
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 540px) {
+  .header-logo {
+    width: 103px;
+  }
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
-} 
+}
 
 main {
   font-size: 130%;
@@ -111,8 +113,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -405,10 +405,10 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
+  max-height: 75vh;
+  max-height: 75vh;
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: flex;
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
@@ -418,11 +418,12 @@ input[data-error]::after {
   grid-column: span 4;
   background: #232323;
   color: #fff;
+  max-width: 40%;
   position: relative;
   text-align: left;
   min-width: 424px;
 }
-.hero-content::after {
+/* .hero-content::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -430,7 +431,7 @@ input[data-error]::after {
   position: absolute;
   right: -80px;
   top: 0;
-}
+} */
 .hero-content > * {
   position: relative;
   z-index: 1;
@@ -455,13 +456,14 @@ input[data-error]::after {
   margin-top: 59px;
 }
 .hero-img {
-  grid-column: span 8;
+  width: 100%;
 }
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -478,15 +480,31 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
+
+@media screen and (max-width: 1024px) {
+  .hero-content {
+    min-width: 350px;
+  }
+  .hero-headline {
+    font-size: 60px;
+  }
+  .hero-text {
+    font-size: 20px;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .hero-section {
-    display: block;
+    flex-direction: column;
+    max-height: unset;
     box-shadow: unset;
   }
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 20px 0px;
+    min-width: unset;
+    max-width: none;
   }
   .hero-content::after {
     content: unset;
@@ -497,14 +515,16 @@ footer {
   .hero-headline {
     font-size: 4.5rem;
     white-space: normal;
+    font-size: 40px;
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    font-size: 13px;
+    margin-top: 17px;
   }
   .hero-img img {
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 35px;
   }
   .hero-section > .btn-signup {
     display: block;
@@ -526,4 +546,3 @@ footer {
     opacity: 1;
   }
 }
-
