--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -11,14 +11,15 @@
 /* Landing Page */
 
 body {
-  margin: 0;
   display: flex;
   flex-direction: column;
   background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
-  max-width: 1300px;
+  max-width: 1600px;
   margin: 0 auto;
+  height: 100vh;
+  justify-content: space-between;
 }
 
 p {
@@ -31,10 +32,10 @@ img {
 }
 
 .topnav {
-  overflow: hidden;
   margin: 3.5%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .topnav a {
   display: block;
@@ -64,42 +65,42 @@ img {
   color: red;
 }
 
+.main-navbar {
+  display: flex;
+}
+
+@media screen and (max-width: 540px) {
+  .header-logo img {
+    width: 170px;
+    padding-left: 17px;
+  }
+}
+
 @media screen and (max-width: 1080px) {
   .topnav a {
     display: none;
   }
   .topnav a.icon {
-    float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-}
-
-@media screen and (max-width: 540px) {
-  .header-logo {
-    width: 103px;
-  }
-  .topnav a {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
+  .main-navbar {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: white;
+    border-radius: 20px;
+    z-index: 1000;
+    margin-top: 70px;
   }
 }
 
@@ -167,6 +168,22 @@ main {
   width: 100%;
   overflow: auto;
   background-color: rgba(26, 39, 156, 0.4);
+}
+
+@media screen and (max-width: 540px) {
+  .bground {
+    background-color: transparent;
+    bottom: 0;
+    height: 90vh;
+    top: unset;
+  }
+  .bground .content {
+    margin: 0;
+    max-width: 100%;
+    border-radius: 0;
+    height: 90vh;
+    bottom: 0;
+  }
 }
 
 .content {
@@ -332,6 +349,7 @@ input[data-error]::after {
   color: #fff;
   cursor: pointer;
   border: 0;
+  max-width: fit-content;
 }
 /* custom select styles */
 .custom-select {
@@ -422,6 +440,9 @@ input[data-error]::after {
   position: relative;
   text-align: left;
   min-width: 424px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 /* .hero-content::after {
   content: "";
@@ -534,6 +555,13 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+
+  footer {
+    height: -webkit-fill-available;
+    display: flex;
+    justify-content: center;
+    align-items: end;
   }
 }
 
