:rocket:(final version) text align on the confirmation text

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -580,6 +580,11 @@ footer {
   overflow: hidden;
 }
 
+.confirmation h2 {
+  padding: 24px;
+  text-align: center;
+}
+
 @keyframes modalopen {
   from {
     opacity: 0;
